ajout du marché galactique